# mandrill

./: .gitignore  .hub  .travis.yml  README.md  default.nix  mandrill-nightly.yml  mandrill.cabal  stack.yaml
examples/: Send.hs
src/Network/API/: Mandrill.hs
src/Network/API/Mandrill/: HTTP.hs  Inbound.hs  Messages.hs  Orphans.hs  Senders.hs  Settings.hs  Trans.hs  Types.hs  Users.hs  Utils.hs  Webhooks.hs
src/Network/API/Mandrill/Messages/: Types.hs
src/Network/API/Mandrill/Users/: Types.hs
test/: Main.hs  Online.hs  RawData.hs  Tests.hs
