name:                mandrill
version:             0.1.0.0
synopsis:            Library for interfacing with the Mandrill JSON API
license:             MIT
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Network.API.Mandrill.Settings
    Network.API.Mandrill.Users
    Network.API.Mandrill.Messages
    Network.API.Mandrill.Types
    Network.API.Mandrill.HTTP
  -- other-modules:       
  -- other-extensions:    
  build-depends:
      base >=4.7 && < 5
    , text >= 1.0.0.0 && < 1.2
    , wreq >= 0.1.0.1
    , aeson >= 0.7.0.3 && < 0.8
    , lens >= 4.1 && < 4.6
    , blaze-html >= 0.5.0.0
  hs-source-dirs:
    src
  default-language:
    Haskell2010