name:                mandrill
version:             0.1.0.0
synopsis:            Library for interfacing with the Mandrill JSON API
description:         Pure Haskell client for the Mandrill JSON API
license:             MIT
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/adinapoli/mandrill

library
  exposed-modules:
    Network.API.Mandrill.Settings
    Network.API.Mandrill.Users
    Network.API.Mandrill.Messages
    Network.API.Mandrill.Types
    Network.API.Mandrill.HTTP
  other-modules:
    Network.API.Mandrill.Utils
  -- other-extensions:
  build-depends:
      base >=4.6 && < 5
    , text >= 1.0.0.0 && < 1.2
    , wreq >= 0.1.0.1
    , aeson >= 0.7.0.3 && < 0.8
    , lens >= 4.1 && < 4.6
    , blaze-html >= 0.5.0.0
    , time
  hs-source-dirs:
    src
  default-language:
    Haskell2010

test-suite mandrill-tests
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  other-modules:
    Tests
  hs-source-dirs:
    test
  default-language:
    Haskell2010
  build-depends:
      mandrill -any
    , base
    , QuickCheck >= 2.6 && < 2.8
    , tasty >= 0.7 && < 0.9
    , tasty-quickcheck
    , tasty-hunit
